[package]
name = "algorithm"
version.workspace = true
edition.workspace = true
description = "Algorithms"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ordered-float = "5.1.0"
proptest = "1.9.0"

[dev-dependencies]
itertools = "0.14.0"
pretty_assertions = "1.4.1"

[lints]
workspace = true
