[package]
name = "tessoku"
version.workspace = true
edition.workspace = true
description = "Solutions for the Tessoku book"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
algorithm = { path = "../algorithm" }
proconio = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
